--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.27.2",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "18.6.3",
