--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.1",
+    "@tanstack/react-query": "^4.1.0",
     "axios": "^0.27.2",
     "next": "12.2.3",
     "react": "18.2.0",
